// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthDisclaimer should match snapshot 1`] = `
<div>
  <p
    class="text-center text-gray-500"
  >
    By clicking “
    Sign in
    ” , you agree to our
     
    <a
      href="https://www.istemai.com/istem_privacy_policy.html"
    >
      <span
        class="disclaimer"
      >
        Terms of Service and Privacy Policy.
      </span>
    </a>
  </p>
</div>
`;

exports[`ForgotPasswordForm should match snapshot 1`] = `
<div>
  <div
    class="mt-16  auth-form"
  >
    <h1
      class="ant-typography lipHead"
    >
      <div
        tabindex="-1"
      >
        Forgot password?
      </div>
    </h1>
    <h4
      class="ant-typography lipHead"
    >
      Reset your password
    </h4>
    <div
      class="h-8"
    />
    <form
      aria-live="polite"
      class="ant-form ant-form-horizontal ant-form-hide-required-mark"
      id="basic"
    >
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-col-24 ant-form-item-label"
        >
          <label
            class="ant-form-item-required"
            for="basic_email"
            title="Email Address you registered with"
          >
            Email Address you registered with
          </label>
        </div>
        <div
          class="ant-col ant-col-24 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                aria-live="off"
                class="ant-input ant-input-lg"
                id="basic_email"
                placeholder="user@email.com"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="warning-msg text-red-400"
      />
      <div
        class="ant-row ant-form-item mt-4"
      >
        <div
          class="ant-col ant-col-24 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                class="ant-btn ant-btn-primary ant-btn-lg ant-btn-block login-button mt-4"
                type="submit"
              >
                <span>
                  SEND PASSWORD RESET EMAIL
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`RegisterMain should match snapshot 1`] = `
<div>
  <section
    class="mt-16 auth-form"
    id="registermain"
  >
    <h1
      class="ant-typography lipHead"
    >
      Welcome to I-Stem!
    </h1>
    <h4
      class="ant-typography lipHead"
    >
      Register your account as
    </h4>
    <div
      class="mt-6"
    >
      <button
        class="ant-btn ant-btn-block register-buttons mt-6"
        type="button"
      >
        <span>
          INDIVIDUAL
        </span>
      </button>
      <button
        class="ant-btn ant-btn-block register-buttons mt-6"
        type="button"
      >
        <span>
          UNIVERSITY REPRESENTATIVE
        </span>
      </button>
      <button
        class="ant-btn ant-btn-block register-buttons mt-6"
        type="button"
      >
        <span>
          BUSINESS REPRESENTATIVE
        </span>
      </button>
      <button
        class="ant-btn ant-btn-block register-buttons mt-6"
        type="button"
      >
        <span>
          VOLUNTEER OR MENTOR
        </span>
      </button>
    </div>
  </section>
</div>
`;

exports[`ResetPassword should match snapshot 1`] = `
<div>
  <div
    class="mt-16  auth-form"
  >
    <h1
      class="ant-typography lipHead"
    >
      <div
        tabindex="-1"
      >
        Set a new password
      </div>
    </h1>
    <span
      class="ant-typography lip-head"
    >
      Keep a strong password to protect your account, We recommend using a mix of upper case, lower case, numbers and special characters.
    </span>
    <div
      class="h-8"
    />
    <form
      aria-live="polite"
      class="ant-form ant-form-horizontal ant-form-hide-required-mark"
      id="basic"
    >
      <div
        aria-live="polite"
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-col-24 ant-form-item-label"
        >
          <label
            class="ant-form-item-required"
            for="basic_password"
            title="New Password"
          >
            New Password
          </label>
        </div>
        <div
          class="ant-col ant-col-24 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <span
                class="ant-input-affix-wrapper ant-input-affix-wrapper-lg ant-input-password ant-input-password-large"
              >
                <input
                  action="click"
                  aria-live="off"
                  class="ant-input ant-input-lg"
                  id="basic_password"
                  placeholder="8+ characters"
                  type="password"
                  value=""
                />
                <span
                  class="ant-input-suffix"
                >
                  <span
                    aria-label="eye-invisible"
                    class="anticon anticon-eye-invisible ant-input-password-icon"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="eye-invisible"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                      />
                      <path
                        d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-live="polite"
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-col-24 ant-form-item-label"
        >
          <label
            class="ant-form-item-required"
            for="basic_password2"
            title="Confirm New Password"
          >
            Confirm New Password
          </label>
        </div>
        <div
          class="ant-col ant-col-24 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <span
                class="ant-input-affix-wrapper ant-input-affix-wrapper-lg ant-input-password ant-input-password-large"
              >
                <input
                  action="click"
                  aria-live="off"
                  class="ant-input ant-input-lg"
                  id="basic_password2"
                  placeholder="8+ characters"
                  type="password"
                  value=""
                />
                <span
                  class="ant-input-suffix"
                >
                  <span
                    aria-label="eye-invisible"
                    class="anticon anticon-eye-invisible ant-input-password-icon"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="eye-invisible"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                      />
                      <path
                        d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-col-24 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                class="ant-btn ant-btn-primary ant-btn-lg ant-btn-block login-button mt-4 "
                type="submit"
              >
                <span>
                  RESET PASSWORD
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
